--- a/Plantilla del profesor/index.html
+++ b/Plantilla del profesor/index.html
@@ -569,6 +569,7 @@
 
       // Main function using the Konekti infrastructure
       function KonektiMain() {
+        console.log("Esta es la función automática");
         var client = new Environment();
         Konekti.header("title", "", "Reversi", 3, {
           class: "w3-black w3-center",
