--- a/Plantilla del profesor/index.html
+++ b/Plantilla del profesor/index.html
@@ -1509,10 +1509,10 @@
             }
           }
 
-          if(colorCount - opponentCount < 0){
-            return -1
-          }else{
-            return 1
+          if (colorCount - opponentCount < 0) {
+            return -1;
+          } else {
+            return 1;
           }
 
           //return colorCount - opponentCount;
@@ -1613,7 +1613,7 @@
               );
 
               console.log(moves);
-              if(moves.length === 0){
+              if (moves.length === 0) {
                 return {
                   score: Infinity,
                   move: null,
@@ -1637,7 +1637,9 @@
               const edges = this.countEdges(flipped, color);
 
               return {
-                score: (captured * 10 + protected1 * 5 + corners * 50 + edges * 10)*this.winner(board),
+                score:
+                  (captured * 10 + protected1 * 5 + corners * 50 + edges * 10) *
+                  this.winner(board),
                 move: move,
               };
             }
@@ -1852,6 +1854,598 @@
       }
       //Fin agente supremo
 
+      //Inicio minmax2
+      class minmax2C extends bestB {
+        constructor() {
+          super();
+          this.board = new Board();
+        }
+
+        compute(board, time) {
+          const w = this.white(board);
+
+          if (w > board.length ** 2 / 4) {
+            const moves = this.board.valid_moves(board, this.color);
+
+            moves.sort(
+              (a, b) =>
+                this.evaluateMove(board, b, this.color) -
+                this.evaluateMove(board, a, this.color)
+            );
+
+            return moves[0];
+          }
+
+          var movi = this.minimaxAlphaBeta(
+            board,
+            10,
+            true,
+            this.color,
+            -Infinity,
+            Infinity
+          ).move;
+
+          if (movi == null || movi == []) {
+            var move = this.board.valid_moves(board, this.color);
+
+            return move[0];
+          }
+
+          return movi;
+        }
+
+        white(array) {
+          let count = 0;
+
+          for (let i = 0; i < array.length; i++) {
+            for (let j = 0; j < array[i].length; j++) {
+              if (array[i][j] === " ") {
+                count++;
+              }
+            }
+          }
+
+          return count;
+        }
+
+        winner(board) {
+          let colorCount = 0;
+          let opponentCount = 0;
+
+          const oppositeColor = this.color === "B" ? "W" : "B";
+
+          for (let i = 0; i < board.length; i++) {
+            for (let j = 0; j < board[i].length; j++) {
+              if (board[i][j] === this.color) {
+                colorCount++;
+              } else if (board[i][j] === oppositeColor) {
+                opponentCount++;
+              }
+            }
+          }
+
+          return colorCount - opponentCount;
+        }
+
+        getFlipped(board, i, j, player) {
+          // Comprobamos que la coordenada es válida
+          if (
+            i < 0 ||
+            i >= board.length ||
+            j < 0 ||
+            j >= board[0].length ||
+            board[i][j] !== " "
+          ) {
+            return null;
+          }
+
+          // Copiamos el tablero para no modificar el original
+          const newBoard = board.map((row) => row.slice());
+
+          // Determinamos el color del jugador actual y el contrario
+          const color = player === "B" ? "B" : "W";
+          const oppositeColor = player === "B" ? "W" : "B";
+
+          // Colocamos la ficha del jugador actual en la coordenada indicada
+          newBoard[i][j] = color;
+
+          // Buscamos si hay alguna ficha del color contrario que se pueda voltear
+          const directions = [
+            [-1, 0],
+            [0, -1],
+            [1, 0],
+            [0, 1],
+            [-1, -1],
+            [-1, 1],
+            [1, -1],
+            [1, 1],
+          ];
+          for (const [dx, dy] of directions) {
+            let x = i + dx;
+            let y = j + dy;
+            let flipped = false;
+            while (
+              x >= 0 &&
+              x < newBoard.length &&
+              y >= 0 &&
+              y < newBoard[0].length &&
+              newBoard[x][y] === oppositeColor
+            ) {
+              x += dx;
+              y += dy;
+              flipped = true;
+            }
+            if (
+              flipped &&
+              x >= 0 &&
+              x < newBoard.length &&
+              y >= 0 &&
+              y < newBoard[0].length &&
+              newBoard[x][y] === color
+            ) {
+              x -= dx;
+              y -= dy;
+              while (newBoard[x][y] === oppositeColor) {
+                newBoard[x][y] = color;
+                x -= dx;
+                y -= dy;
+              }
+            }
+          }
+
+          return newBoard;
+        }
+
+        getTopN(board, color) {
+          var moves = this.board.valid_moves(board, color);
+
+          const sortedData = moves.sort(
+            (a, b) =>
+              this.evaluateMove(board, b, color) -
+              this.evaluateMove(board, a, color)
+          );
+
+          const topN = sortedData.slice(0, 2);
+          return topN;
+        }
+
+        minimaxAlphaBeta(board, depth, maximizingPlayer, color, alpha, beta) {
+          var oppositeColor = color === "B" ? "W" : "B";
+
+          if (
+            depth === 0 ||
+            (!this.board.can_play(board, color) &&
+              !this.board.can_play(board, oppositeColor))
+          ) {
+            return {
+              score: this.winner(board),
+              move: null,
+            };
+          }
+
+          if (maximizingPlayer) {
+            let maxEval = -Infinity;
+            let bestMove = null;
+
+            const possibleMoves = this.getTopN(board, color);
+
+            //const possibleMoves = this.board.valid_moves(board, color);
+
+            for (let i = 0; i < possibleMoves.length; i++) {
+              const move = possibleMoves[i];
+              const newBoard = this.getFlipped(board, move[0], move[1], color);
+              const evaluar = this.minimaxAlphaBeta(
+                newBoard,
+                depth - 1,
+                false,
+                oppositeColor,
+                alpha,
+                beta
+              );
+              if (evaluar.score > maxEval) {
+                maxEval = evaluar.score;
+                bestMove = move;
+              }
+              alpha = Math.max(alpha, evaluar.score);
+              if (beta <= alpha) {
+                break; // Beta cut-off
+              }
+            }
+            return {
+              score: maxEval,
+              move: bestMove,
+            };
+          } else {
+            let minEval = Infinity;
+            let bestMove = null;
+            const possibleMoves = this.getTopN(board, color);
+            //const possibleMoves = this.board.valid_moves(board, color);
+            for (let i = 0; i < possibleMoves.length; i++) {
+              const move = possibleMoves[i];
+              const newBoard = this.getFlipped(board, move[0], move[1], color);
+              const evaluar = this.minimaxAlphaBeta(
+                newBoard,
+                depth - 1,
+                true,
+                color,
+                alpha,
+                beta
+              );
+              if (evaluar.score < minEval) {
+                minEval = evaluar.score;
+                bestMove = move;
+              }
+              beta = Math.min(beta, evaluar.score);
+              if (beta <= alpha) {
+                break; // Alpha cut-off
+              }
+            }
+            return {
+              score: minEval,
+              move: bestMove,
+            };
+          }
+        }
+      }
+      //Fin minmax2
+
+      //Inicio minmax2
+      class minmax2K extends Agent {
+        constructor() {
+          super();
+          this.board = new Board();
+        }
+
+        compute(board, time) {
+          let transpositionTable = new Map();
+          console.log("tabla mov", transpositionTable);
+
+          var movi = this.minimaxAlphaBeta(
+            board,
+            4,
+            true,
+            this.color,
+            -Infinity,
+            Infinity,
+            transpositionTable
+          ).move;
+
+          return movi;
+        }
+
+        //Retorna la diferencia de fichas entre el jugador y el oponente actuales
+        winner(board) {
+          let colorCount = 0;
+          let opponentCount = 0;
+
+          const oppositeColor = this.color === "B" ? "W" : "B";
+
+          for (let i = 0; i < board.length; i++) {
+            for (let j = 0; j < board[i].length; j++) {
+              if (board[i][j] === this.color) {
+                colorCount++;
+              } else if (board[i][j] === oppositeColor) {
+                opponentCount++;
+              }
+            }
+          }
+
+          return colorCount - opponentCount;
+        }
+
+        getFlipped(board, i, j, player) {
+          // Comprobamos que la coordenada es válida
+          if (
+            i < 0 ||
+            i >= board.length ||
+            j < 0 ||
+            j >= board[0].length ||
+            board[i][j] !== " "
+          ) {
+            return null;
+          }
+
+          // Copiamos el tablero para no modificar el original
+          const newBoard = board.map((row) => row.slice());
+
+          // Determinamos el color del jugador actual y el contrario
+          const color = player === "B" ? "B" : "W";
+          const oppositeColor = player === "B" ? "W" : "B";
+
+          // Colocamos la ficha del jugador actual en la coordenada indicada
+          newBoard[i][j] = color;
+
+          // Buscamos si hay alguna ficha del color contrario que se pueda voltear
+          const directions = [
+            [-1, 0],
+            [0, -1],
+            [1, 0],
+            [0, 1],
+            [-1, -1],
+            [-1, 1],
+            [1, -1],
+            [1, 1],
+          ];
+          for (const [dx, dy] of directions) {
+            let x = i + dx;
+            let y = j + dy;
+            let flipped = false;
+            while (
+              x >= 0 &&
+              x < newBoard.length &&
+              y >= 0 &&
+              y < newBoard[0].length &&
+              newBoard[x][y] === oppositeColor
+            ) {
+              x += dx;
+              y += dy;
+              flipped = true;
+            }
+            if (
+              flipped &&
+              x >= 0 &&
+              x < newBoard.length &&
+              y >= 0 &&
+              y < newBoard[0].length &&
+              newBoard[x][y] === color
+            ) {
+              x -= dx;
+              y -= dy;
+              while (newBoard[x][y] === oppositeColor) {
+                newBoard[x][y] = color;
+                x -= dx;
+                y -= dy;
+              }
+            }
+          }
+
+          return newBoard;
+        }
+
+        evaluateMove(board, move, player) {
+          const color = player === "B" ? "B" : "W";
+          const oppositeColor = player === "B" ? "W" : "B";
+
+          const flipped = this.getFlipped(board, move[0], move[1], color);
+          if (flipped === null) {
+            return -Infinity;
+          }
+
+          const captured = this.countCaptured(board, flipped);
+          const protected1 = this.countProtected1(flipped, color);
+          const corners = this.countCorners(move[0], move[1]);
+          const borders = this.countBorders(move[0], move[1]);
+
+          const numPieces =
+            this.countAlive(flipped, color) +
+            this.countAlive(flipped, oppositeColor);
+
+          if (numPieces > (board.length * board.length) / 2) {
+            // En la segunda mitad del juego, dar más importancia a las esquinas y menos importancia a las fichas capturadas
+            var score =
+              captured * 15 + protected1 * 5 + corners * 50 + borders * 15;
+            if (score <= 0) {
+              score = 1;
+            }
+            return score;
+          } else {
+            var score =
+              captured * 50 + protected1 * 5 + corners * 10 + borders * 20;
+
+            if (score <= 0) {
+              score = 1;
+            }
+            return score;
+          }
+        }
+
+        countCaptured(board, flipped) {
+          let captured = 0;
+          for (let i = 0; i < board.length; i++) {
+            for (let j = 0; j < board[0].length; j++) {
+              if (board[i][j] != flipped[i][j]) {
+                captured++;
+                if (
+                  i == 0 ||
+                  j == 0 ||
+                  i == board[0].length - 1 ||
+                  j == board[0].length - 1
+                ) {
+                  captured++;
+                }
+              }
+            }
+          }
+          return captured;
+        }
+
+        countProtected1(flipped, color) {
+          const oppositeColor = color === "W" ? "B" : "B";
+          var moves = this.board.valid_moves(flipped, oppositeColor);
+
+          var resultBoard = flipped.map((row) => row.slice());
+
+          var abortar = false;
+
+          for (var move of moves) {
+            if (
+              (move[0] <= 1 && move[1] == flipped[0].length - 2) ||
+              (move[0] == flipped[0].length - 2 &&
+                move[1] == flipped[0].length - 2) ||
+              (move[0] == flipped[0].length - 2 && move[1] <= 1) ||
+              (move[0] <= 1 && move[1] <= 1)
+            ) {
+              abortar = true;
+
+              break;
+            }
+            var newBoard = this.getFlipped(
+              flipped,
+              move[0],
+              move[1],
+              oppositeColor
+            );
+            for (let i = 0; i < newBoard[0].length; i++) {
+              for (let j = 0; j < newBoard[0].length; j++) {
+                if (newBoard[i][j] != flipped[i][j]) {
+                  resultBoard[i][j] = "O";
+                }
+              }
+            }
+          }
+          var protegidas = this.countAlive(resultBoard, color);
+
+          if (abortar) {
+            protegidas = protegidas - flipped.length * (flipped.length / 2);
+          }
+          return protegidas;
+        }
+        countCorners(i, j, n) {
+          if (
+            (i == 0 && j == n - 1) ||
+            (i == n - 1 && j == n - 1) ||
+            (i == n - 1 && j == 0) ||
+            (i == 0 && j == 0)
+          ) {
+            console.log("corner");
+            return 1;
+          }
+          return 0;
+        }
+        countBorders(i, j, n) {
+          if (i == 0 || j == 0 || i == n - 1 || j == n - 1) {
+            return 1;
+          }
+          return 0;
+        }
+
+        countAlive(array, letter) {
+          let count = 0;
+          for (const row of array) {
+            for (const cell of row) {
+              if (cell === letter) {
+                count++;
+              }
+            }
+          }
+          return count;
+        }
+
+        minimaxAlphaBeta(
+          board,
+          depth,
+          maximizingPlayer,
+          color,
+          alpha,
+          beta,
+          transpositionTable
+        ) {
+          var oppositeColor = color === "B" ? "W" : "B";
+
+          let boardString = JSON.stringify(board);
+
+          // Verificar si el tablero ya ha sido evaluado antes
+          if (transpositionTable.has(boardString)) {
+            return transpositionTable.get(boardString);
+          }
+
+          //Si la profundidad es 0 o ya ninguno de los jugadores puede mover
+          if (
+            depth === 0 ||
+            (!this.board.can_play(board, color) &&
+              !this.board.can_play(board, oppositeColor))
+          ) {
+            let result = {
+              score: this.winner(board),
+              move: null,
+            };
+            transpositionTable.set(boardString, result);
+            return result;
+          }
+
+          if (maximizingPlayer) {
+            let maxEval = -Infinity;
+            let bestMove = null;
+            const possibleMoves = this.board.valid_moves(board, color);
+            console.log("movimientos:", possibleMoves);
+            possibleMoves.sort((moveA, moveB) => {
+              const evalA = this.evaluateMove(board, moveA, color);
+              const evalB = this.evaluateMove(board, moveB, color);
+              return evalB - evalA; // Ordenar en orden descendente
+              console.log("bestMove:", bestMove);
+            });
+
+            const movesToEvaluate = Math.min(3, possibleMoves.length); // Limitar a los tres primeros movimientos
+            console.log("movimientos a evaluar:", movesToEvaluate);
+            for (let i = 0; i < movesToEvaluate; i++) {
+              const move = possibleMoves[i];
+              const newBoard = this.getFlipped(board, move[0], move[1], color);
+              const evaluar = this.minimaxAlphaBeta(
+                newBoard,
+                depth - 1,
+                false,
+                oppositeColor,
+                alpha,
+                beta,
+                transpositionTable
+              );
+              if (evaluar.score > maxEval) {
+                maxEval = evaluar.score;
+                bestMove = move;
+              } else {
+                bestMove = possibleMoves[0];
+              }
+              console.log("bestMoveinmax:", bestMove);
+              alpha = Math.max(alpha, evaluar.score);
+              if (beta <= alpha) {
+                break; // Beta cut-off
+              }
+            }
+            console.log("mejor movimiento:", bestMove);
+            let result = {
+              score: maxEval,
+              move: bestMove,
+            };
+            transpositionTable.set(boardString, result);
+            return result;
+          } else {
+            let minEval = Infinity;
+            let bestMove = null;
+            const possibleMoves = this.board.valid_moves(board, color);
+            console.log(possibleMoves);
+            for (let i = 0; i < possibleMoves.length; i++) {
+              const move = possibleMoves[i];
+              const newBoard = this.getFlipped(board, move[0], move[1], color);
+              const evaluar = this.minimaxAlphaBeta(
+                newBoard,
+                depth - 1,
+                true,
+                color,
+                alpha,
+                beta,
+                transpositionTable
+              );
+              if (evaluar.score < minEval) {
+                minEval = evaluar.score;
+                bestMove = move;
+              }
+              beta = Math.min(beta, evaluar.score);
+              if (beta <= alpha) {
+                break; // Alpha cut-off
+              }
+            }
+            console.log("mejor movimiento min:", bestMove);
+            let result = {
+              score: minEval,
+              move: bestMove,
+            };
+            transpositionTable.set(boardString, result);
+            return result;
+          }
+        }
+      }
+      //Fin minmax2
+
       /*
        * Environment (Cannot be modified or any of its attributes accesed directly)
        */
@@ -1870,6 +2464,8 @@
             bB: new bestB(),
             mm: new minmax(),
             spr: new supreme(),
+            mm2: new minmax2C(),
+            minmax_bB: new minmax2K(),
           };
         }
 
