--- a/Plantilla del profesor/index.html
+++ b/Plantilla del profesor/index.html
@@ -1076,7 +1076,7 @@
       }
 
       //Inicio agente bestB
-      class bestB extends Agent {
+      class bestB_A extends Agent {
         constructor() {
           super();
           this.board = new Board();
@@ -2461,7 +2461,7 @@
             mdd: new ManyDisks(),
             mdc: new ManyDisks_Cristian(),
             bA: new bestA(),
-            bB: new bestB(),
+            bBo: new bestB_A(),
             mm: new minmax(),
             spr: new supreme(),
             mm2: new minmax2C(),
