Ultima prueba antes borrar todos los agentes

--- a/Plantilla del profesor/index.html
+++ b/Plantilla del profesor/index.html
@@ -1075,7 +1075,243 @@
         }
       }
 
-      //Inicio agente bestB
+      //Agente bestB
+      class bestB extends Agent {
+        constructor() {
+          super();
+          this.board = new Board();
+        }
+
+        compute(board, time) {
+          const moves = this.board.valid_moves(board, this.color);
+
+          moves.sort(
+            (a, b) =>
+              this.evaluateMove(board, b, this.color) -
+              this.evaluateMove(board, a, this.color)
+          );
+
+          return moves[0];
+        }
+
+        evaluateMove(board, move, player) {
+          const color = player === "B" ? "B" : "W";
+          const oppositeColor = player === "B" ? "W" : "B";
+
+          const flipped = this.getFlipped(board, move[0], move[1], color);
+          if (flipped === null) {
+            return -Infinity;
+          }
+
+          if (
+            (move[0] === 1 && move[1] === flipped[0].length - 2) ||
+            (move[0] === flipped[0].length - 2 &&
+              move[1] === flipped[0].length - 2) ||
+            (move[0] === flipped[0].length - 2 && move[1] <= 1) ||
+            (move[0] === 1 && move[1] <= 1) ||
+            ((move[0] === 1 || move[0] === flipped[0].length - 2) &&
+              (move[1] === 0 || move[1] === flipped[0].length - 1)) ||
+            ((move[0] === 0 || move[0] === flipped[0].length - 1) &&
+              (move[1] === 1 || move[1] === flipped[0].length - 2))
+          ) {
+            return 0;
+          }
+
+          const captured = this.countCaptured(board, flipped);
+          const protected1 = this.countProtected1(flipped, color);
+          const corners = this.countCorners(move[0], move[1]);
+          const edges = this.countEdges(flipped, color);
+          const mobility = this.countMobility(flipped, oppositeColor);
+          const position = this.getPositionValue(move[0], move[1]);
+
+          var score = captured * 10 + protected1 * 5 + corners * 50;
+
+          if (score <= 0) {
+            score = 1;
+          }
+          return score;
+        }
+
+        countCaptured(board, flipped) {
+          let captured = 0;
+          for (let i = 0; i < board.length; i++) {
+            for (let j = 0; j < board[0].length; j++) {
+              if (board[i][j] != flipped[i][j]) {
+                captured++;
+                if (
+                  i == 0 ||
+                  j == 0 ||
+                  i == board[0].length - 1 ||
+                  j == board[0].length - 1
+                ) {
+                  captured = captured + 6;
+                }
+              }
+            }
+          }
+          return captured;
+        }
+
+        countProtected1(flipped, color) {
+          const oppositeColor = color === "W" ? "B" : "B";
+          var moves = this.board.valid_moves(flipped, oppositeColor);
+
+          var resultBoard = flipped.map((row) => row.slice());
+
+          var abortar = false;
+
+          for (var move of moves) {
+            var newBoard = this.getFlipped(
+              flipped,
+              move[0],
+              move[1],
+              oppositeColor
+            );
+            for (let i = 0; i < newBoard[0].length; i++) {
+              for (let j = 0; j < newBoard[0].length; j++) {
+                if (newBoard[i][j] != flipped[i][j]) {
+                  resultBoard[i][j] = "O";
+                }
+              }
+            }
+          }
+          var protegidas = this.countAlive(resultBoard, color);
+
+          return protegidas;
+        }
+        countCorners(i, j, n) {
+          if (
+            (i == 0 && j == n - 1) ||
+            (i == n - 1 && j == n - 1) ||
+            (i == n - 1 && j == 0) ||
+            (i == 0 && j == 0)
+          ) {
+            return 1;
+          }
+          return 0;
+        }
+        countEdges(flipped, color) {
+          return 1;
+        }
+        countMobility(flipped, oppositeColor) {
+          return 1;
+        }
+        getPositionValue(i, j) {
+          return 1;
+        }
+
+        countAlive(array, letter) {
+          let count = 0;
+          for (const row of array) {
+            for (const cell of row) {
+              if (cell === letter) {
+                count++;
+              }
+            }
+          }
+          return count;
+        }
+
+        getFlipped(board, i, j, player) {
+          // Comprobamos que la coordenada es válida
+          if (
+            i < 0 ||
+            i >= board.length ||
+            j < 0 ||
+            j >= board[0].length ||
+            board[i][j] !== " "
+          ) {
+            return null;
+          }
+
+          // Copiamos el tablero para no modificar el original
+          const newBoard = board.map((row) => row.slice());
+
+          // Determinamos el color del jugador actual y el contrario
+          const color = player === "B" ? "B" : "W";
+          const oppositeColor = player === "B" ? "W" : "B";
+
+          // Colocamos la ficha del jugador actual en la coordenada indicada
+          newBoard[i][j] = color;
+
+          // Buscamos si hay alguna ficha del color contrario que se pueda voltear
+          const directions = [
+            [-1, 0],
+            [0, -1],
+            [1, 0],
+            [0, 1],
+            [-1, -1],
+            [-1, 1],
+            [1, -1],
+            [1, 1],
+          ];
+          for (const [dx, dy] of directions) {
+            let x = i + dx;
+            let y = j + dy;
+            let flipped = false;
+            while (
+              x >= 0 &&
+              x < newBoard.length &&
+              y >= 0 &&
+              y < newBoard[0].length &&
+              newBoard[x][y] === oppositeColor
+            ) {
+              x += dx;
+              y += dy;
+              flipped = true;
+            }
+            if (
+              flipped &&
+              x >= 0 &&
+              x < newBoard.length &&
+              y >= 0 &&
+              y < newBoard[0].length &&
+              newBoard[x][y] === color
+            ) {
+              x -= dx;
+              y -= dy;
+              while (newBoard[x][y] === oppositeColor) {
+                newBoard[x][y] = color;
+                x -= dx;
+                y -= dy;
+              }
+            }
+          }
+
+          return newBoard;
+        }
+
+        bestMove(board, pmoves) {
+          var bestMove = null;
+          var bestScore = 0;
+
+          for (const move of pmoves) {
+            const score = this.evaluateMove(board, move, this.color);
+
+            if (score > bestScore) {
+              bestScore = score;
+              bestMove = move;
+            }
+          }
+
+          return bestMove;
+        }
+
+        getscore(array, letter) {
+          let count = 0;
+          for (const row of array) {
+            for (const cell of row) {
+              if (cell === letter) {
+                count++;
+              }
+            }
+          }
+          return count;
+        }
+      }
+      //Agente bestB
+
+      //Inicio agente bestB viejo
       class bestB_A extends Agent {
         constructor() {
           super();
@@ -1864,7 +2100,7 @@
         compute(board, time) {
           const w = this.white(board);
 
-          if (w > board.length ** 2 / 4) {
+          if (w > 21) {
             const moves = this.board.valid_moves(board, this.color);
 
             moves.sort(
@@ -1878,7 +2114,7 @@
 
           var movi = this.minimaxAlphaBeta(
             board,
-            10,
+            9,
             true,
             this.color,
             -Infinity,
@@ -2027,9 +2263,9 @@
             let maxEval = -Infinity;
             let bestMove = null;
 
-            const possibleMoves = this.getTopN(board, color);
+            //const possibleMoves = this.getTopN(board, color);
 
-            //const possibleMoves = this.board.valid_moves(board, color);
+            const possibleMoves = this.board.valid_moves(board, color);
 
             for (let i = 0; i < possibleMoves.length; i++) {
               const move = possibleMoves[i];
@@ -2058,8 +2294,8 @@
           } else {
             let minEval = Infinity;
             let bestMove = null;
-            const possibleMoves = this.getTopN(board, color);
-            //const possibleMoves = this.board.valid_moves(board, color);
+            //const possibleMoves = this.getTopN(board, color);
+            const possibleMoves = this.board.valid_moves(board, color);
             for (let i = 0; i < possibleMoves.length; i++) {
               const move = possibleMoves[i];
               const newBoard = this.getFlipped(board, move[0], move[1], color);
@@ -2466,6 +2702,7 @@
             spr: new supreme(),
             mm2: new minmax2C(),
             minmax_bB: new minmax2K(),
+            bB: new bestB(),
           };
         }
 
